--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <p>The second paragraph</p>
         <p>The first paragraph</p>
     </div>
+    <script src="index.js">
+
+    </script>
+
 </body>
 
 </html>
