iterate over element

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <div id="container">
         <p>The first paragraph</p>
         <p>The second paragraph</p>
-        <p>The first paragraph</p>
+        <p>The third paragraph</p>
     </div>
+
+    <div id="new_body">
+        <p>The fourth paragraph</p>
+        <p>The fifth paragraph</p>
+        <p>The sixth paragraph</p>
+    </div>
+
     <script src="index.js">
 
     </script>
