clone an element

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <p>The sixth paragraph</p>
     </div>
 
+
+    <div id="clone_body">
+
+    </div>
     <script src="index.js">
 
     </script>
