--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
         <p>The third paragraph</p>
     </div>
 
-    <div id="new_body">
-        <p>The fourth paragraph</p>
-        <p>The fifth paragraph</p>
-        <p>The sixth paragraph</p>
-    </div>
+    <ul id="menu">
+        <li>Services</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
 
-
-    <div id="clone_body">
-
-    </div>
     <script src="index.js">
 
     </script>
