create dom element

--- a/base.html
+++ b/base.html
@@ -14,7 +14,7 @@
         <li><a href="/about">About</a></li>
     </ul>
 
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
